# linkcovery

./: .env.example  .gitignore  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  RELEASE_README.md  build_binary.py  cli_entry.py  docs.txt  links_export.json  main.py  pyproject.toml  release-notes.md  setup_dev.py  users_export.json
.github/: dependabot.yml
.github/workflows/: latest-changes.yml  release.yml
app/: __init__.py
app/cli/: __init__.py
app/cli/commands/: config.py  export.py  import_.py  import_export.py  link.py  script.py  user.py  version.py
app/cli/handlers/: __init__.py  link_handlers.py
app/core/: config.py  exporter.py  fetch_description.py  logger.py  settings.py  setup.py  utils.py
app/core/database/: __init__.py  crud.py  models.py  repositories.py  schemas.py  session_manager.py
app/core/exceptions/: __init__.py
app/core/interfaces/: __init__.py
app/core/models/: __init__.py  database.py  link.py
app/core/services/: __init__.py
app/core/services/import_export/: __init__.py  exporter.py  importer.py
app/core/validation/: __init__.py
docs/: digest.txt  docs.txt  gitdocs.txt
linkcovery/: __init__.py
linkcovery/cli/: __init__.py  commands.py  config.py  config_commands.py  data.py  handlers.py  import_export_commands.py  link_commands.py  links.py  utils.py  version_commands.py
linkcovery/cli/commands/: import_export.py  link.py
linkcovery/core/: chrome_bookmark.py  config.py  database.py  exceptions.py  logger.py  models.py  settings.py  utils.py
linkcovery/core/database/: __init__.py  crud.py  models.py  repositories.py  session_manager.py
linkcovery/core/services/import_export/: exporter.py  importer.py
linkcovery/services/: data_service.py  import_export_service.py  link_service.py
linkcovery/webui/: __init__.py  app.py
linkcovery/webui/templates/: edit.html  error.html  index.html
scripts/: migrate_database.py  test.py  update_version.py
src/: __init__.py  cli.py  exporter.py  import.py  importer.py  logger.py  logging.py  main.py  settengs.py  settings.py
src/database/: __init__.py  database.py  link.py  schema.py
