[project]
name = "linkcovery"
version = "0.2.1"
description = "Link discovery tool for people with love and Python :)"
readme = "README.md"
authors = [{name = "Arian Omrani"}]
requires-python = ">=3.13"
dependencies = [
    "logger>=1.4",
    "pydantic-settings>=2.7.1",
    "pydantic[email]>=2.10.5",
    "rich>=13.9.4",
    "typer>=0.15.1",
]

[dependency-groups]
dev = [
    "gitingest>=0.1.2",
    "ruff>=0.9.0",
    "sqlite-web>=0.6.4",
]

[tool.ruff]
line-length = 120

[project.urls]
Homepage = "https://github.com/arian24b/linkcovery"
Issues = "https://github.com/arian24b/linkcovery/issues"

[project.scripts]
linkcovery = "cli:app"

[tool.uv]
package = true
