[project]
name = "linkcovery"
version = "0.3.1"
description = "Bookmark and Link discovery tool for people with love and Python :)"
readme = "README.md"
license = "MIT"
keywords = ["bookmark", "link", "discovery", "tool", "python"]
authors = [{name = "Arian Omrani"}]
requires-python = ">=3.13"
dependencies = [
    "pydantic[email]>=2.10.6",
    "platformdirs>=4.3.8",
    "rich>=13.9.4",
    "sqlalchemy>=2.0.38",
    "typer>=0.15.1",
    "email-validator>=2.2.0",
    "pydantic-settings>=2.10.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.4",
    "sqlite-web>=0.6.4",
]
test = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.12.0",
    "factory-boy>=3.3.0",
    "faker>=20.0.0",
]
build = [
    "pyinstaller>=6.14.2",
]
lint = [
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
linkcovery = "app.cli:cli_app"

[project.urls]
Homepage = "https://github.com/arian24b/linkcovery"
Issues = "https://github.com/arian24b/linkcovery/issues"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"] # Standard checks + isort

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "tests*"]
