[project]
name = "linkcovery"
version = "1.7.8"
description = "A modern, fast, and intuitive bookmark management CLI tool"
readme = "README.md"
license = "MIT"
keywords = ["bookmark", "link", "management", "cli", "python"]
authors = [{name = "Arian Omrani", email = "arian24b@gmail.com"}]
maintainers = [{name = "Arian Omrani", email = "arian24b@gmail.com"}]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli]>=0.129.0",
    "httpx[http2]>=0.28.1",
    "jinja2>=3.1.6",
    "platformdirs>=4.7.1",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.22",
    "questionary>=2.1.1",
    "sqlalchemy>=2.0.46",
    "typer>=0.23.1",
    "uvicorn>=0.40.0",
]

[project.scripts]
linkcovery = "linkcovery.cli:cli_app"

[project.urls]
Homepage = "https://github.com/arian24b/linkcovery"
Issues = "https://github.com/arian24b/linkcovery/issues"
Changelog = "https://github.com/arian24b/linkcovery/blob/main/CHANGELOG.md"
Documentation = "https://github.com/arian24b/linkcovery#readme"

[tool.ruff]
line-length = 120
indent-width = 4
respect-gitignore = true
fix = true
show-fixes = true

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "S",      # bandit
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T20",    # flake8-print
    "SIM",    # flake8-simplify
    "LOG",    # flake8-logging
    "RUF",    # Ruff-specific rules
]
ignore = [
    "S101",   # Use of assert detected (needed for tests)
    "T20",    # print statements (CLI tool)
    "A003",   # Class attribute shadows builtin
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["linkcovery"]
